0.11.0
  some ui friendlinesses
  possibly an async fix for this and/or the audio portion

0.10.2
  hopefully fix start bug introduced in 0.10.1 
  
0.10.1
  fix UI to make options actually selectable

0.10.0
  add option to not display mouse (capture_mouse_default_1)
  breaking change:
  rename the bitblt setting
    from capture_transparent_windows_with_mouse_blink_only_non_aero_if_1 to 
    capture_transparent_windows_including_mouse_in_non_aero_if_1_causes_annoying_mouse_flicker


0.9.{7,8}
  include a patched mplayer to make p2p streaming drop less [phew!]
  GUI cleanups for p2p streaming
  disable wav for now (buggy)

0.9.6
  more p2p streaming available options
  default to 32-bit instead of 24-bit, in case it is more compatible (though barely slower) with some systems [vlc, too]

0.9.5
  minor ui improvements

0.9.4
  add broadcast streaming from your desktop option.
  bump virtual audio version to 0.4.1 [possibly more win8 friendly]
  
0.9.3
  hopefully work with VLC when the width*bit depth doesn't add up to an even multiple of 4.
  Haven't determined yet if this is VLC's bug or not, but it was causing it to come in like a diagonal blurred image...

0.9.2
  hopefully a working release of 0.9.1

0.9.1

  bump virtual audio version, to default to 16 bit, which is more compatible with FMLE

0.9.0

  add streaming (like to justin.tv) option

0.8.7

  actually work with ffmpeg again on jdk7, also close right

0.8.6

  bump virtual audio and "GUI wrapper" code, which now accomodates dshow devices with spaces in it.

0.8.5

  possibly the same fixes as 0.8.4 (name i420 better at least is here now)...

0.8.4

  some stability fixes when restarting it in the same process.
  comes with a virtual audio that is updated to hopefully allow for 5.1 input
  not use .mov container format for video, as it apparently needed stable incoming frame rates.

0.8.3

 fix virtual audio "too high PTS" bug. I hope.