@@ -1,3 +1,6 @@
+XXX
+  new parameter capture_foreground_window_if_1
+
 0.11.0
   some ui friendlinesses
   possibly an async fix for this and/or the audio portion
